--- a/data/material/lab08:material/lab08-a/composetest/docker-compose.yml
+++ b/data/material/lab08:material/lab08-a/composetest/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3'
+version: '2'
 
 services:
   web:
     build: .
     ports:
      - "5000:5000"
-    volumes:
-     - /Volumes:/code
   redis:
-    image: "redis"
+    image: "redis:alpine"
