--- a/data/material/lab08:material/lab08-a/composetest/docker-compose.yml
+++ b/data/material/lab08:material/lab08-a/composetest/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.3'
 
 services:
   web:
@@ -6,6 +6,6 @@ services:
     ports:
      - "5000:5000"
     volumes:
-     - "/Volumes:/code"
+     - .:/code
   redis:
     image: "redis:alpine"
