--- a/data/material/lab08:material/lab08-a/composetest/Dockerfile
+++ b/data/material/lab08:material/lab08-a/composetest/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.6.1-alpine
 ADD . /code
 WORKDIR /code
 RUN pip install -r requirements.txt
-CMD ["python", "app.py"]
+CMD ["sudo", "python", "app.py"]
