--- a/data/material/lab08:material/lab08-a/composetest/docker-compose.yml
+++ b/data/material/lab08:material/lab08-a/composetest/docker-compose.yml
@@ -6,10 +6,6 @@ services:
     ports:
      - "5000:5000"
     volumes:
-     - type: volume
-        source: cache
-        target: /code
-        volume:
-            nocopy: true
+     - /code
   redis:
     image: "redis:alpine"
