--- a/data/material/lab15:material/guestbook/guestbook-all-in-one.yaml
+++ b/data/material/lab15:material/guestbook/guestbook-all-in-one.yaml
@@ -14,6 +14,8 @@ spec:
     app: redis
     tier: backend
     role: master
+
+  type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
